unpackaged/main/default/objects/Staging_Task__c/Staging_Task__c.object-meta.xml
<CustomObject>
    <label>Staging Task</label>
    <nameField>
        <displayFormat>STN-{000000}</displayFormat>
        <label>Staging Task</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>