unpackaged/main/default/objects/Staging_Task__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>