unpackaged/main/default/objects/Staging_Task__c/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>BusinessUnit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BPSC</fullName>
            </value>
            <value>
                <fullName>SYB</fullName>
            </value>
            <value>
                <fullName>SLG</fullName>
            </value>
            <value>
                <fullName>HLS</fullName>
            </value>
            <value>
                <fullName>CLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>