unpackaged/main/default/objects/Staging_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due_Date</label>
    <type>Date</type>
</CustomField>