unpackaged/main/default/objects/Staging_Task__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <label>Expected_Revenue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>