unpackaged/main/default/objects/Staging_Task__c/fields/Import_Error__c.field-meta.xml
<CustomField>
    <fullName>Import_Error__c</fullName>
    <label>Import Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>