unpackaged/main/default/objects/Staging_Task__c/fields/Import_Status__c.field-meta.xml
<CustomField>
    <fullName>Import_Status__c</fullName>
    <label>Import Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Base Import Complete</fullName>
            </value>
            <value>
                <fullName>Parents Associated</fullName>
            </value>
            <value>
                <fullName>Role Budgets Created</fullName>
            </value>
            <value>
                <fullName>Assignments Created</fullName>
            </value>
            <value>
                <fullName>PTA Over Hours</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>