unpackaged/main/default/objects/Staging_Task__c/fields/Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>Internal_Id__c</fullName>
    <label>Internal_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>