unpackaged/main/default/objects/Staging_Task__c/fields/Is_Reportable__c.field-meta.xml
<CustomField>
    <fullName>Is_Reportable__c</fullName>
    <label>Is Reportable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>