unpackaged/main/default/objects/Staging_Task__c/fields/Owner_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Internal_ID__c</fullName>
    <label>Owner_Internal_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>