unpackaged/main/default/objects/Staging_Task__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Owner_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>