unpackaged/main/default/objects/Staging_Task__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <label>Parent_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>