unpackaged/main/default/objects/Staging_Task__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <label>Project_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>