unpackaged/main/default/objects/Staging_Task__c/fields/Project_Task_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Project_Task_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task Assignment</label>
    <referenceTo>pse__Project_Task_Assignment__c</referenceTo>
    <relationshipLabel>Staging Tasks</relationshipLabel>
    <relationshipName>Staging_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>