unpackaged/main/default/objects/Staging_Task__c/fields/Remaining_Effort__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Effort__c</fullName>
    <label>Remaining_Effort</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>