unpackaged/main/default/objects/Staging_Task__c/fields/Reportable__c.field-meta.xml
<CustomField>
    <fullName>Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reportable</label>
    <type>Checkbox</type>
</CustomField>