unpackaged/main/default/objects/Staging_Task__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <label>Resource_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>