unpackaged/main/default/objects/Staging_Task__c/fields/RUC_Category__c.field-meta.xml
<CustomField>
    <fullName>RUC_Category__c</fullName>
    <label>RUC Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoiceable</fullName>
            </value>
            <value>
                <fullName>Free Work</fullName>
            </value>
            <value>
                <fullName>Partner BD/SME Support</fullName>
            </value>
            <value>
                <fullName>Non-billable Travel time to customer</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>FI-Projects &amp; Training Delivery</fullName>
            </value>
            <value>
                <fullName>FI-Portfolio Support</fullName>
            </value>
            <value>
                <fullName>Shadow Time</fullName>
            </value>
            <value>
                <fullName>Recruiting and Hiring</fullName>
            </value>
            <value>
                <fullName>Career Management</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Receiving Training</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Dummy</fullName>
            </value>
            <value>
                <fullName>Free Work (incl Investment)</fullName>
            </value>
            <value>
                <fullName>4 - Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>