unpackaged/main/default/objects/Staging_Task__c/fields/Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Task_Category__c</fullName>
    <label>Task Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Contingent</fullName>
            </value>
            <value>
                <fullName>Product Bug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>