unpackaged/main/default/objects/Staging_Task__c/fields/Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_ID__c</fullName>
    <label>Task_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>