unpackaged/main/default/objects/Staging_Task__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Task_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>