unpackaged/main/default/objects/Staging_Task__c/fields/Task_Rate__c.field-meta.xml
<CustomField>
    <fullName>Task_Rate__c</fullName>
    <label>Task_Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>