unpackaged/main/default/objects/Staging_Task__c/fields/Task_Role__c.field-meta.xml
<CustomField>
    <fullName>Task_Role__c</fullName>
    <label>Task Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>