unpackaged/main/default/objects/Staging_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>