unpackaged/main/default/objects/Staging_Task__c/fields/taskdatescheck__c.field-meta.xml
<CustomField>
    <fullName>taskdatescheck__c</fullName>
    <formula>If ( 
        AND (Due_Date__c  - Start_Date__c  = 0, 
              Remaining_Effort__c &gt; 24),
     true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>taskdatescheck</label>
    <type>Checkbox</type>
</CustomField>