unpackaged/main/default/objects/Staging_Task__c/fields/Training_Module__c.field-meta.xml
<CustomField>
    <fullName>Training_Module__c</fullName>
    <label>Training_Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>