unpackaged/main/default/objects/Staging_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Budget__c</columns>
    <columns>Resource_Name__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Task_ID__c</columns>
    <columns>State__c</columns>
    <columns>Project_ID__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Remaining_Effort__c</columns>
    <columns>Project_Task__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Task_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>