unpackaged/main/default/objects/Staging_Task__c/listViews/Check_Task.listView-meta.xml
<ListView>
    <fullName>Check_Task</fullName>
    <columns>NAME</columns>
    <columns>Task_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Resource_Name__c</columns>
    <columns>Task_ID__c</columns>
    <columns>State__c</columns>
    <columns>Project_ID__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Remaining_Effort__c</columns>
    <columns>Reportable__c</columns>
    <columns>Project_Task__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reportable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Task_ID__c</field>
        <operation>equals</operation>
        <value>T-990903</value>
    </filters>
    <label>Check Task</label>
</ListView>